--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 .App {
+  background: black;
+  color: aqua;
+  font-size: 36px;
+  padding: 1rem;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  font-weight: 500;
 }
 
 .App-header {
@@ -17,10 +16,6 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
